<resources>
    <string name="app_name">Organisasi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log keluar</string>
    <string name="action_about">About</string>

    <string name="nav_header_title">Aplikasi Sukarelawan Malaysia</string>
    <string name="nav_header_subtitle">sukarelawan_malaysia@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_event">Aktiviti</string>
    <string name="nav_volunteer">Sukarelawan</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_other">Lain - lain</string>
    <string name="nav_logout">Log keluar</string>

    <string name="label_create">Cipta Aktiviti Baru</string>
    <string name="label_login">Log Masuk</string>
    <string name="label_detail">Maklumat Aktiviti</string>
    <string name="label_list_event">Senarai Aktiviti</string>
    <string name="label_list_volunteer">Senarai Sukarelawan</string>
    <string name="label_profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="text_select">pilih</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_submit">submit</string>
    <string name="text_welcome">Selamat Datang</string>
    <string name="text_email">EMAIL</string>
    <string name="text_password">PASSWORD</string>
    <string name="hint_title">TAJUK</string>
    <string name="hint_limit">LIMIT</string>
    <string name="hint_description">DESCRIPTION</string>
    <string name="text_reset">reset</string>

    <string-array name="status">
        <item>Ongoing</item>
        <item>Complete</item>
        <item>Cancel</item>
    </string-array>
</resources>
