<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_event" />
        <item
            android:id="@+id/nav_volunteer"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/nav_volunteer" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_profil" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
